--- a/Jira Ticket Editor/package.json
+++ b/Jira Ticket Editor/package.json
@@ -15,6 +15,7 @@
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-quill-new": "^3.4.6",
     "sass": "^1.86.0"
   },
   "devDependencies": {
@@ -26,6 +27,6 @@
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.2"
   }
 }
