--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ react-mockup-v2/package-lock.json
 .$UI_UX Design.drawio.bkp
 UI_UX Design.drawio
 /Jira Ticket Editor/mydata
+Jira Ticket Editor/package-lock.json
